test/files/neg/badtok-1.scala
// scalac: -Xsource:2.13 -deprecation -Xfatal-warnings
// bug 989
'42'


// SI-10133
'''

'';

// SI-10120
'abc'

'utf_8'

'utf-8'

'
